--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,11 @@ dependencies:
   image_picker: 0.8.6+1
 
   provider: 6.0.5
+  
   shared_preferences: ^2.2.1
+
+  flutter_riverpod: ^2.1.3
+
 
 dev_dependencies:
   flutter_test:
