--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,10 @@ dependencies:
   shared_preferences: ^2.2.1
 
   flutter_riverpod: ^2.1.3
+  firebase_core: ^2.17.0
+  firebase_auth: ^4.10.1
+  cloud_firestore: ^4.9.3
+  firebase_storage: ^11.2.8
 
 
 dev_dependencies:
