--- a/functions/package.json
+++ b/functions/package.json
@@ -14,13 +14,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "child-process-promise": "^2.2.1",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.1.0",
-    "typescript": "^4.9.0"
+    "typescript": "^4.9.0",
+    "firebase-functions-test": "^3.1.0"
   },
   "private": true
 }
