--- a/functions/package.json
+++ b/functions/package.json
@@ -10,16 +10,18 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "16"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "child-process-promise": "^2.2.1",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.1.0",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
