push notification done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   cloud_firestore: ^4.9.3
   firebase_storage: ^11.2.8
   cloud_functions: ^4.4.2
+  firebase_messaging: ^14.6.9
 
 
 dev_dependencies:
